--- a/questionpage/Codestorm.html
+++ b/questionpage/Codestorm.html
@@ -62,13 +62,139 @@
   <div class="main-content">
     <h1 id="title">ROUND 1: CODESTORM</h1>
     <div class="box" id="questionBox">
-      <ul>
-        <li>1. What is your name?</li>
-        <li>2. What inspired you to join this event?</li>
-        <li>3. Do you have any prior experience in coding?</li>
-        <li>4. What technologies are you excited to explore?</li>
-        <li>5. Where do you see yourself in 5 years?</li>
-      </ul>
+      <div class="question-container">
+        <div class="question active" data-index="0">Q1 
+You are tasked with solving a classic problem of combinatorial explosion under the constraints of infinite supply. Given a target integer amount N (representing cents), and a set S = {S₁, S₂, ..., Sₘ} of coin denominations (each an integer > 0), your objective is to compute the total number of distinct combinations of coins from set S that sum exactly to N.
+
+Constraints:
+
+You may assume an unbounded (infinite) supply of each coin denomination in S.
+
+The order of coin selection is irrelevant; combinations differing only in order are considered identical.
+
+Formally, determine the number of unique multisets of coins from S such that the sum of their values equals N.
+
+Examples:
+For N = 4 and S = {1, 2, 3}, the distinct combinations that satisfy the condition are:
+
+{1,1,1,1}
+
+{1,1,2}
+
+{2,2}
+
+{1,3}
+
+Output: 4
+
+For N = 10 and S = {2, 5, 3, 6}, the valid combinations are:
+
+{2,2,2,2,2}
+
+{2,2,3,3}
+
+{2,2,6}
+
+{2,3,5}
+
+{5,5}
+
+Output: 5
+
+Your task is to devise an efficient algorithm to compute the number of such unique combinations for arbitrary N and S. Naïve brute-force approaches will likely succumb to performance degradation for large inputs.</div>
+        <div class="question" data-index="1">Q2
+Aryan is playing an exciting adventure game where he must cross a series of magical stones arranged in a straight line. Each stone has a number written on it, which tells Aryan the maximum number of steps he can jump forward from that position.
+For example:
+
+If the stone shows 3, Aryan can jump to any stone between 1 to 3 steps ahead.
+
+If the stone shows 0, Aryan is stuck and cannot move forward from there.
+
+Aryan starts at the first stone and his goal is to reach the last stone using the minimum number of jumps possible.
+You are given an array arr[] of non-negative integers, where each element represents the maximum number of steps Aryan can jump forward from that stone.
+
+Your task is to write a Python function that returns the minimum number of jumps needed to reach the last stone starting from the first.
+If Aryan cannot reach the last stone, return -1.
+Number of stones: 2 ≤ arr.length ≤ 10⁴
+
+Stone values: 0 ≤ arr[i] ≤ 10⁴
+
+Write a Python function to solve the problem.
+
+Test the function on the given examples.
+
+Think about how you can optimize the solution for larger arrays (hint: greedy approach).</div>
+        <div class="question" data-index="2">Q3 You are playing the classic "Bulls and Cows" game with a friend, where you secretly write down a number, and your friend tries to guess it. After each guess, you give them a hint based on two things: the number of bulls, which are digits that are correct in both value and position, and the number of cows, which are digits present in the secret number but in the wrong position. For example, if the secret is "1807" and the guess is "7810", then there is 1 bull ("8") and 3 cows ("7", "1", and "0"). Keep in mind that both the secret and guess may contain duplicate digits. Your task is to write a program or describe a method that compares the secret number and your friend’s guess, and returns a hint formatted as "xAyB" where x is the number of bulls and y is the number of cows.</div>
+        <div class="question" data-index="3">Q4 You are working as a software engineer on a real-time monitoring system for a smart city infrastructure project. One component of the system is responsible for tracking temperature fluctuations recorded by sensors deployed across various locations. 
+These sensors continuously send temperature readings as an array of integers. Due to resource constraints, you can only process the data in chunks — using a sliding window of fixed size k.
+Problem:
+As part of the system’s analytics, you need to continuously calculate the highest temperature reading in the last k time units as new data arrives.
+
+This is critical for real-time alerts (e.g., overheating in an area), so the solution must be efficient even for large datasets.
+
+Your Task:
+You are given:
+
+An array nums representing the sequence of temperature readings over time.
+
+An integer k representing the window size (e.g., how many recent readings to analyze at a time).
+
+Write a function that returns an array of the maximum temperature for each sliding window of size k.
+
+Each time the window moves one position to the right, compute and store the maximum of the current window.</div>
+        <div class="question" data-index="4">Q5
+Recently, the first model of decoration was assembled from multi-colored glowing light bulbs at the holiday jewelry factory. The prototype of the decoration was assembled as follows:
+
+First, two light bulbs were taken and connected with a wire.
+Then, a light bulb was taken for 
+ times and it was connected with a wire to one of the previously added to the garland light bulbs.
+The result was a decoration of 
+ colored light bulbs. The factory has 
+ bulbs of different colors. When the prototype was ready, it was handed over to the Beauty Department. In this department, it was decided to consider the beauty of jewelry the number of pairs of light bulbs of the same color, connected by a wire.
+Employees of the Beauty Department 
+ repaint some of the light bulbs in one of the 
+ colors for some reason known only to them. All they need to produce the perfect jewelry is to quickly determine the beauty of the product, after repainting the next light bulb.
+The staff of the beauty department asks you, the best programmer, to write a program that will determine the beauty of jewelry according to the given prototype of jewelry and the sequence of repainting light bulbs.
+
+Input format
+
+The first line contains three integers 
+, 
+, 
+ denoting the number of bulbs in the product prototype, the number of repaints, and the number of different colors of bulbs available at the factory.
+The second line contains 
+ positive integers 
+ denoting the colors of the bulbs in the order of addition to the product.
+The third line contains 
+ positive integers 
+ denoting the number of the light bulb to which the 
+ light bulb was connected.
+The next 
+ lines contain two integers 
+ and 
+ denoting the number of the repainted lamp and the color in which it is repainted, respectively. The numbers in the lines are separated by single spaces.
+Output format
+
+Print 
+ lines. The 
+ line should contain a single integer denoting the number of pairs of light bulbs of the same color, connected by a wire, after execution and repainting.
+
+Constraints</div>
+      </div>
+      <button class="nav-button prev-button" disabled>
+        <svg width="60px" height="60px" viewBox="0 0 60 60" class="border">
+          <circle cx="30" cy="30" r="28" class="bg-line" />
+          <circle cx="30" cy="30" r="28" class="hl-line" />
+        </svg>
+        <ion-icon name="chevron-back-outline"></ion-icon>
+      </button>
+      <button class="nav-button next-button">
+        <svg width="60px" height="60px" viewBox="0 0 60 60" class="border">
+          <circle cx="30" cy="30" r="28" class="bg-line" />
+          <circle cx="30" cy="30" r="28" class="hl-line" />
+        </svg>
+        <ion-icon name="chevron-forward-outline"></ion-icon>
+      </button>
     </div>
   </div>
 
