--- a/questionpage/Codestorm.html
+++ b/questionpage/Codestorm.html
@@ -65,7 +65,7 @@
       <div class="question-container">
         <div class="question active" data-index="0">
 Q1
-You are given a target amount N (in cents) and a set of positive integers S = {S₁, S₂, ..., Sₘ} representing coin denominations. Each denomination in S is available in infinite supply, and your task is to compute the number of distinct combinations of coins that sum exactly to N. A combination is defined as a multiset, so the order of coins does not matter—combinations that differ only in order are considered the same.
+You are given a target amount N (in cents) and a set of positive integers S = {S1, S2, ..., Sn} representing coin denominations. Each denomination in S is available in infinite supply, and your task is to compute the number of distinct combinations of coins that sum exactly to N. A combination is defined as a multiset, so the order of coins does not matter—combinations that differ only in order are considered the same.
 
 For example, with N = 4 and S = {1, 2, 3}, the valid combinations are {1,1,1,1}, {1,1,2}, {2,2}, and {1,3}, totaling 4 combinations. With N = 10 and S = {2, 5, 3, 6}, there are 5 valid combinations, such as {2,2,2,2,2} and {5,5}.
 
